contrast issue fixed (better)

--- a/src/app/course/component.scss
+++ b/src/app/course/component.scss
@@ -153,19 +153,22 @@ i {
   display:flex;
   font-size:87%;
   text-align: justify;
-  color: black;
   margin-top: -3.2em;
   margin-left: 8em;
   margin-right: 2em;
   line-height: 1.7em;
-  padding-bottom: 1em;
+  bottom: 1em;
   height: auto;
-  min-height: 7em;
+  min-height: 3.5em;
 }
 
 .showDescription:hover {
   cursor: pointer;
+  color: black;
+}
 
+.selectedDescription {
+  color: black;
 }
 
 .separator {
